force-app/main/default/objects/S_P_Vendor_Queue__c/S_P_Vendor_Queue__c.object-meta.xml
<CustomObject>
    <description>This custom object will store queues for recalculation</description>
    <label>S&amp;P Vendor Queue</label>
    <nameField>
        <displayFormat>SVQ # {000000000}</displayFormat>
        <label>S&amp;P Vendor Queue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S&amp;P Vendor Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>