force-app/main/default/objects/S_P_Vendor_Queue__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <label>Percentage</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>