force-app/main/default/objects/S_P_Vendor_Queue__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <label>Product Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>